src/styles/tufte.css
/* ... */
label.margin-toggle:not(.sidenote-number) {
    display: none;
}

.iframe-wrapper {
    position: relative;
    padding-bottom: 56.25%;
    /* 16:9 */
    padding-top: 25px;
    height: 0;
}

.iframe-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/*----------------------------------------------------------------------------*/
/* 8. Smaller screens 
/*----------------------------------------------------------------------------*/

@media (max-width: 760px) {
    body {
        width: 84%;
        padding-left: 8%;
        padding-right: 8%;
    }

    article {
        width: 95%;
        padding: 0rem 0rem 5rem 0rem;
    }

    hr,
    section>p,
    section>footer,
    section>table {
        width: 100%;
    }

    pre>code {
        width: 97%;
    }

    section>dl,
    section>ol,
    section>ul {
        width: 90%;
    }

    figure {
        max-width: 90%;
    }

    figcaption,
    figure.fullwidth figcaption {
        margin-right: 0%;
        max-width: none;
    }

    blockquote {
        margin-left: 1.5em;
        margin-right: 0em;
    }

    blockquote p,
    blockquote footer {
        width: 100%;
    }

    label.margin-toggle:not(.sidenote-number) {
        display: inline;
    }

    .sidenote,
    .marginnote {
        display: none;
    }

    .margin-toggle:checked+.sidenote,
    .margin-toggle:checked+.marginnote {
        display: block;
        float: left;
        left: 1rem;
        clear: both;
        width: 95%;
        margin: -1.5rem 2.5%;
        position: relative;
    }

    label.margin-toggle {
        cursor: pointer;
        color: red;
    }

    div.table-wrapper,
    table {
        width: 85%;
    }

    img {
        width: 100%;
        z-index: 0;
    }

}

